--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "lama-dev-next-dashboard": "link:",
+    "-dev-next-dashboard": "link:",
     "next": "14.2.5",
     "react": "^18",
     "react-dom": "^18"
